--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     </div>
 
     <script src="./src/index.js"></script>
+    <audio id="bg-music" src="./assets/Friendship-Quests.m4a" loop></audio>
   </body>
 </html>
